# ChangeLog for sys-kernel/pegasos-dev-sources
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/pegasos-dev-sources/Attic/ChangeLog,v 1.9 2004/07/30 15:40:50 dholm Exp $

*pegasos-dev-sources-2.6.7-r4 (30 Jul 2004)

  30 Jul 2004; David Holm <dholm@gentoo.org>
  +pegasos-dev-sources-2.6.7-r4.ebuild:
  Added bugfix for some G4 models.

*pegasos-dev-sources-2.6.7-r3 (24 Jul 2004)

  24 Jul 2004; David Holm <dholm@gentoo.org>
  +files/pegasos-dev-sources-2.6.7.CAN-2004-0596.patch,
  +pegasos-dev-sources-2.6.7-r3.ebuild:
  Fix for CAN-0596 (Bug #57826).

*pegasos-dev-sources-2.6.7-r2 (21 Jul 2004)

  21 Jul 2004; David Holm <dholm@gentoo.org>
  +pegasos-dev-sources-2.6.7-r2.ebuild:
  Bumped the version of a couple of patches, and added patch from bug #56479
  (CAN-2004-0497).

  05 Jul 2004; David Holm <dholm@gentoo.org>
  pegasos-dev-sources-2.6.7-r1.ebuild:
  Added a minor fix before going on vacation (nothing serious). I also added a
  kernel config for the pegasos for inexperienced users.

*pegasos-dev-sources-2.6.7-r1 (02 Jul 2004)

  02 Jul 2004; David Holm <dholm@gentoo.org>
  +pegasos-dev-sources-2.6.7-r1.ebuild:
  Fixes bug #55694.
  Added bootsplash support (that works on PPC).

*pegasos-dev-sources-2.6.7 (24 Jun 2004)

  24 Jun 2004; David Holm <dholm@gentoo.org>
  +pegasos-dev-sources-2.6.7.ebuild:
  Version bump. Added the new Marvell gigabit driver by Nicolas DET.

*pegasos-dev-sources-2.6.6-r1 (19 Jun 2004)

  19 Jun 2004; David Holm <dholm@gentoo.org>
  +pegasos-dev-sources-2.6.6-r1.ebuild:
  Version bumped. Added new pegasos patches.

*pegasos-dev-sources-2.6.6 (17 May 2004)

  17 May 2004; David Holm <dholm@gentoo.org> +metadata.xml,
  +pegasos-dev-sources-2.6.6.ebuild:
  Initial import.
