@@ -1,9 +1,10 @@
-MD5 8d00e582a35280a7e0d08a519eada280 ChangeLog 1141
+MD5 b22724255d41594367f8eb80f0743804 ChangeLog 1297
 MD5 a768f20366d412feaf748b4ac46b046e metadata.xml 350
 MD5 683c787a00476a7de21a79393836caf9 pegasos-sources-2.4.26.ebuild 763
 MD5 72431236fde2e83d85feb7b01aff0318 pegasos-sources-2.4.26-r1.ebuild 804
 MD5 6de95f73fdf888aa815dba5275491a98 pegasos-sources-2.4.26-r2.ebuild 883
 MD5 d3514fb08457ad064363bde3510218d3 pegasos-sources-2.4.26-r3.ebuild 918
+MD5 9d44738b450b13a668ae9645562cd99b pegasos-sources-2.4.26-r4.ebuild 756
 MD5 ea3523a550520965a412fb2e1758939c files/digest-pegasos-sources-2.4.26 144
 MD5 d4a740ae56c2049247083af387a22a85 files/pegasos-sources-2.4.26.CAN-2004-0394.patch 350
 MD5 ea3523a550520965a412fb2e1758939c files/digest-pegasos-sources-2.4.26-r1 144
@@ -12,3 +13,4 @@ MD5 0f66013f643c79c97fda489618a4e2fd files/pegasos-sources-2.4.26.CAN-2004-0535.
 MD5 ea3523a550520965a412fb2e1758939c files/digest-pegasos-sources-2.4.26-r2 144
 MD5 3bdf00d5f80fe9dfbfe8220e076cd04c files/pegasos-sources-2.4.26.CAN-2004-0497.patch 707
 MD5 ea3523a550520965a412fb2e1758939c files/digest-pegasos-sources-2.4.26-r3 144
+MD5 4ba1bbe507391d995294dc168456cdbf files/digest-pegasos-sources-2.4.26-r4 139
