@@ -1,0 +1,2 @@
+MD5 88d7aefa03c92739cb70298a0b486e2c linux-2.4.26.tar.bz2 30772389
+MD5 99b4438139c993de2facb33db8c02a78 pegpatches-2.4-26.2.tar.bz2 927220
