@@ -1,0 +1,22 @@
+# Copyright 1999-2004 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/pegasos-sources/Attic/pegasos-sources-2.4.26-r4.ebuild,v 1.1 2004/08/08 11:00:52 dholm Exp $
+
+ETYPE="sources"
+inherit kernel-2
+detect_version
+
+# Version of gentoo patchset
+GPV=26.2
+GPV_SRC="mirror://gentoo/pegpatches-${KV_MAJOR}.${KV_MINOR}-${GPV}.tar.bz2"
+
+KEYWORDS="-* ppc"
+IUSE=""
+
+UNIPATCH_LIST="${DISTDIR}/pegpatches-${KV_MAJOR}.${KV_MINOR}-${GPV}.tar.bz2"
+UNIPATCH_DOCS="${WORKDIR}/patches/pegpatches-${KV_MAJOR}.${KV_MINOR}-${GPV}/0000_README"
+
+DESCRIPTION="Full sources including the Pegasos patchset for the ${KV_MAJOR}.${KV_MINOR} kernel tree"
+SRC_URI="${KERNEL_URI} ${GPV_SRC}"
+
+DEPEND="${DEPEND}"
