@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/pegasos-sources
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/pegasos-sources/Attic/ChangeLog,v 1.5 2004/07/21 09:12:24 dholm Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/pegasos-sources/Attic/ChangeLog,v 1.6 2004/08/08 11:00:52 dholm Exp $
+
+*pegasos-sources-2.4.26-r4 (08 Aug 2004)
+
+  08 Aug 2004; David Holm <dholm@gentoo.org>
+  +pegasos-sources-2.4.26-r4.ebuild:
+  Added fix for CAN-2004-0415.
 
 *pegasos-sources-2.4.26-r3 (21 Jul 2004)
 
