@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/pegasos-dev-sources
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/pegasos-dev-sources/Attic/ChangeLog,v 1.9 2004/07/30 15:40:50 dholm Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/pegasos-dev-sources/Attic/ChangeLog,v 1.10 2004/08/08 11:05:24 dholm Exp $
+
+*pegasos-dev-sources-2.6.7-r5 (08 Aug 2004)
+
+  08 Aug 2004; David Holm <dholm@gentoo.org>
+  pegasos-dev-sources-2.6.7-r5.ebuild:
+  Added fix for CAN-2004-0415.
 
 *pegasos-dev-sources-2.6.7-r4 (30 Jul 2004)
 
